Vlue/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CATCH
    CLASS
    COLON
    DO
    DOT
    END
    FLOAT
    FOR
    GLOBAL
    IN
    LBB
    LIST
    RBB
    REPEAT
    TRY

Grammar

Rule 0     S' -> program
Rule 1     program -> root
Rule 2     root -> root statement
Rule 3     root -> statement
Rule 4     statement -> if_statement
Rule 5     statement -> while_statement
Rule 6     statement -> variable_declaration SEMI
Rule 7     statement -> variable_value_change SEMI
Rule 8     statement -> function_declaration
Rule 9     statement -> PASS SEMI
Rule 10    statement -> use SEMI
Rule 11    statement -> empty
Rule 12    statement -> expression SEMI
Rule 13    expression -> calculate
Rule 14    expression -> string_calculate
Rule 15    expression -> compare_expression
Rule 16    expression -> function_call
Rule 17    use -> USE IDENTIFIER
Rule 18    variable_declaration -> VAR IDENTIFIER EQUAL expression
Rule 19    variable_declaration -> VAR IDENTIFIER
Rule 20    variable_value_change -> IDENTIFIER EQUAL expression
Rule 21    function_call -> IDENTIFIER LSB function_call_parameter RSB
Rule 22    function_call_parameter -> function_call_parameter COMMA calculate
Rule 23    function_call_parameter -> calculate
Rule 24    function_call_parameter -> empty
Rule 25    function_declaration -> FUNCTION IDENTIFIER LSB function_parameter RSB LMB root RMB
Rule 26    function_parameter -> function_parameter COMMA IDENTIFIER
Rule 27    function_parameter -> IDENTIFIER
Rule 28    function_parameter -> empty
Rule 29    while_statement -> WHILE LSB expression RSB LMB root RMB
Rule 30    if_statement -> IF LSB expression RSB LMB root RMB
Rule 31    if_statement -> if_statement ELSE IF LSB expression RSB LMB root RMB
Rule 32    if_statement -> if_statement ELSE LMB root RMB
Rule 33    compare_expression -> compare_expression compare_operator calculate
Rule 34    compare_expression -> calculate
Rule 35    compare_operator -> LB
Rule 36    compare_operator -> RB
Rule 37    compare_operator -> LB EQUAL
Rule 38    compare_operator -> RB EQUAL
Rule 39    compare_operator -> EQUAL EQUAL
Rule 40    compare_operator -> NOTEQUAL EQUAL
Rule 41    string_calculate -> string_calculate stringoperator STRING
Rule 42    string_calculate -> STRING
Rule 43    stringoperator -> PLUS
Rule 44    calculate -> calculate PLUS calculate
Rule 45    calculate -> calculate MINUS calculate
Rule 46    calculate -> calculate MUL calculate
Rule 47    calculate -> calculate DIV calculate
Rule 48    calculate -> MINUS calculate
Rule 49    calculate -> LSB calculate RSB
Rule 50    calculate -> INT
Rule 51    calculate -> IDENTIFIER
Rule 52    empty -> <empty>

Terminals, with rules where they appear

CATCH                : 
CLASS                : 
COLON                : 
COMMA                : 22 26
DIV                  : 47
DO                   : 
DOT                  : 
ELSE                 : 31 32
END                  : 
EQUAL                : 18 20 37 38 39 39 40
FLOAT                : 
FOR                  : 
FUNCTION             : 25
GLOBAL               : 
IDENTIFIER           : 17 18 19 20 21 25 26 27 51
IF                   : 30 31
IN                   : 
INT                  : 50
LB                   : 35 37
LBB                  : 
LIST                 : 
LMB                  : 25 29 30 31 32
LSB                  : 21 25 29 30 31 49
MINUS                : 45 48
MUL                  : 46
NOTEQUAL             : 40
PASS                 : 9
PLUS                 : 43 44
RB                   : 36 38
RBB                  : 
REPEAT               : 
RMB                  : 25 29 30 31 32
RSB                  : 21 25 29 30 31 49
SEMI                 : 6 7 9 10 12
STRING               : 41 42
TRY                  : 
USE                  : 17
VAR                  : 18 19
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

calculate            : 13 22 23 33 34 44 44 45 45 46 46 47 47 48 49
compare_expression   : 15 33
compare_operator     : 33
empty                : 11 24 28
expression           : 12 18 20 29 30 31
function_call        : 16
function_call_parameter : 21 22
function_declaration : 8
function_parameter   : 25 26
if_statement         : 4 31 32
program              : 0
root                 : 1 2 25 29 30 31 32
statement            : 2 3
string_calculate     : 14 41
stringoperator       : 41
use                  : 10
variable_declaration : 6
variable_value_change : 7
while_statement      : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . root
    (2) root -> . root statement
    (3) root -> . statement
    (4) statement -> . if_statement
    (5) statement -> . while_statement
    (6) statement -> . variable_declaration SEMI
    (7) statement -> . variable_value_change SEMI
    (8) statement -> . function_declaration
    (9) statement -> . PASS SEMI
    (10) statement -> . use SEMI
    (11) statement -> . empty
    (12) statement -> . expression SEMI
    (30) if_statement -> . IF LSB expression RSB LMB root RMB
    (31) if_statement -> . if_statement ELSE IF LSB expression RSB LMB root RMB
    (32) if_statement -> . if_statement ELSE LMB root RMB
    (29) while_statement -> . WHILE LSB expression RSB LMB root RMB
    (18) variable_declaration -> . VAR IDENTIFIER EQUAL expression
    (19) variable_declaration -> . VAR IDENTIFIER
    (20) variable_value_change -> . IDENTIFIER EQUAL expression
    (25) function_declaration -> . FUNCTION IDENTIFIER LSB function_parameter RSB LMB root RMB
    (17) use -> . USE IDENTIFIER
    (52) empty -> .
    (13) expression -> . calculate
    (14) expression -> . string_calculate
    (15) expression -> . compare_expression
    (16) expression -> . function_call
    (44) calculate -> . calculate PLUS calculate
    (45) calculate -> . calculate MINUS calculate
    (46) calculate -> . calculate MUL calculate
    (47) calculate -> . calculate DIV calculate
    (48) calculate -> . MINUS calculate
    (49) calculate -> . LSB calculate RSB
    (50) calculate -> . INT
    (51) calculate -> . IDENTIFIER
    (41) string_calculate -> . string_calculate stringoperator STRING
    (42) string_calculate -> . STRING
    (33) compare_expression -> . compare_expression compare_operator calculate
    (34) compare_expression -> . calculate
    (21) function_call -> . IDENTIFIER LSB function_call_parameter RSB

  ! shift/reduce conflict for PASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for USE resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LSB resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    PASS            shift and go to state 9
    IF              shift and go to state 13
    WHILE           shift and go to state 15
    VAR             shift and go to state 16
    IDENTIFIER      shift and go to state 17
    FUNCTION        shift and go to state 18
    USE             shift and go to state 19
    $end            reduce using rule 52 (empty -> .)
    MINUS           shift and go to state 24
    LSB             shift and go to state 14
    INT             shift and go to state 25
    STRING          shift and go to state 26

  ! PASS            [ reduce using rule 52 (empty -> .) ]
  ! IF              [ reduce using rule 52 (empty -> .) ]
  ! WHILE           [ reduce using rule 52 (empty -> .) ]
  ! VAR             [ reduce using rule 52 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 52 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 52 (empty -> .) ]
  ! USE             [ reduce using rule 52 (empty -> .) ]
  ! MINUS           [ reduce using rule 52 (empty -> .) ]
  ! LSB             [ reduce using rule 52 (empty -> .) ]
  ! INT             [ reduce using rule 52 (empty -> .) ]
  ! STRING          [ reduce using rule 52 (empty -> .) ]

    program                        shift and go to state 1
    root                           shift and go to state 2
    statement                      shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    variable_declaration           shift and go to state 6
    variable_value_change          shift and go to state 7
    function_declaration           shift and go to state 8
    use                            shift and go to state 10
    empty                          shift and go to state 11
    expression                     shift and go to state 12
    calculate                      shift and go to state 20
    string_calculate               shift and go to state 21
    compare_expression             shift and go to state 22
    function_call                  shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> root .
    (2) root -> root . statement
    (4) statement -> . if_statement
    (5) statement -> . while_statement
    (6) statement -> . variable_declaration SEMI
    (7) statement -> . variable_value_change SEMI
    (8) statement -> . function_declaration
    (9) statement -> . PASS SEMI
    (10) statement -> . use SEMI
    (11) statement -> . empty
    (12) statement -> . expression SEMI
    (30) if_statement -> . IF LSB expression RSB LMB root RMB
    (31) if_statement -> . if_statement ELSE IF LSB expression RSB LMB root RMB
    (32) if_statement -> . if_statement ELSE LMB root RMB
    (29) while_statement -> . WHILE LSB expression RSB LMB root RMB
    (18) variable_declaration -> . VAR IDENTIFIER EQUAL expression
    (19) variable_declaration -> . VAR IDENTIFIER
    (20) variable_value_change -> . IDENTIFIER EQUAL expression
    (25) function_declaration -> . FUNCTION IDENTIFIER LSB function_parameter RSB LMB root RMB
    (17) use -> . USE IDENTIFIER
    (52) empty -> .
    (13) expression -> . calculate
    (14) expression -> . string_calculate
    (15) expression -> . compare_expression
    (16) expression -> . function_call
    (44) calculate -> . calculate PLUS calculate
    (45) calculate -> . calculate MINUS calculate
    (46) calculate -> . calculate MUL calculate
    (47) calculate -> . calculate DIV calculate
    (48) calculate -> . MINUS calculate
    (49) calculate -> . LSB calculate RSB
    (50) calculate -> . INT
    (51) calculate -> . IDENTIFIER
    (41) string_calculate -> . string_calculate stringoperator STRING
    (42) string_calculate -> . STRING
    (33) compare_expression -> . compare_expression compare_operator calculate
    (34) compare_expression -> . calculate
    (21) function_call -> . IDENTIFIER LSB function_call_parameter RSB

  ! shift/reduce conflict for PASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for USE resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> root .)
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LSB resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    $end            reduce using rule 1 (program -> root .)
    PASS            shift and go to state 9
    IF              shift and go to state 13
    WHILE           shift and go to state 15
    VAR             shift and go to state 16
    IDENTIFIER      shift and go to state 17
    FUNCTION        shift and go to state 18
    USE             shift and go to state 19
    MINUS           shift and go to state 24
    LSB             shift and go to state 14
    INT             shift and go to state 25
    STRING          shift and go to state 26

  ! PASS            [ reduce using rule 52 (empty -> .) ]
  ! IF              [ reduce using rule 52 (empty -> .) ]
  ! WHILE           [ reduce using rule 52 (empty -> .) ]
  ! VAR             [ reduce using rule 52 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 52 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 52 (empty -> .) ]
  ! USE             [ reduce using rule 52 (empty -> .) ]
  ! MINUS           [ reduce using rule 52 (empty -> .) ]
  ! LSB             [ reduce using rule 52 (empty -> .) ]
  ! INT             [ reduce using rule 52 (empty -> .) ]
  ! STRING          [ reduce using rule 52 (empty -> .) ]
  ! $end            [ reduce using rule 52 (empty -> .) ]

    statement                      shift and go to state 27
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    variable_declaration           shift and go to state 6
    variable_value_change          shift and go to state 7
    function_declaration           shift and go to state 8
    use                            shift and go to state 10
    empty                          shift and go to state 11
    expression                     shift and go to state 12
    calculate                      shift and go to state 20
    string_calculate               shift and go to state 21
    compare_expression             shift and go to state 22
    function_call                  shift and go to state 23

state 3

    (3) root -> statement .

    PASS            reduce using rule 3 (root -> statement .)
    IF              reduce using rule 3 (root -> statement .)
    WHILE           reduce using rule 3 (root -> statement .)
    VAR             reduce using rule 3 (root -> statement .)
    IDENTIFIER      reduce using rule 3 (root -> statement .)
    FUNCTION        reduce using rule 3 (root -> statement .)
    USE             reduce using rule 3 (root -> statement .)
    MINUS           reduce using rule 3 (root -> statement .)
    LSB             reduce using rule 3 (root -> statement .)
    INT             reduce using rule 3 (root -> statement .)
    STRING          reduce using rule 3 (root -> statement .)
    $end            reduce using rule 3 (root -> statement .)
    RMB             reduce using rule 3 (root -> statement .)


state 4

    (4) statement -> if_statement .
    (31) if_statement -> if_statement . ELSE IF LSB expression RSB LMB root RMB
    (32) if_statement -> if_statement . ELSE LMB root RMB

    PASS            reduce using rule 4 (statement -> if_statement .)
    IF              reduce using rule 4 (statement -> if_statement .)
    WHILE           reduce using rule 4 (statement -> if_statement .)
    VAR             reduce using rule 4 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 4 (statement -> if_statement .)
    FUNCTION        reduce using rule 4 (statement -> if_statement .)
    USE             reduce using rule 4 (statement -> if_statement .)
    MINUS           reduce using rule 4 (statement -> if_statement .)
    LSB             reduce using rule 4 (statement -> if_statement .)
    INT             reduce using rule 4 (statement -> if_statement .)
    STRING          reduce using rule 4 (statement -> if_statement .)
    $end            reduce using rule 4 (statement -> if_statement .)
    RMB             reduce using rule 4 (statement -> if_statement .)
    ELSE            shift and go to state 28


state 5

    (5) statement -> while_statement .

    PASS            reduce using rule 5 (statement -> while_statement .)
    IF              reduce using rule 5 (statement -> while_statement .)
    WHILE           reduce using rule 5 (statement -> while_statement .)
    VAR             reduce using rule 5 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> while_statement .)
    FUNCTION        reduce using rule 5 (statement -> while_statement .)
    USE             reduce using rule 5 (statement -> while_statement .)
    MINUS           reduce using rule 5 (statement -> while_statement .)
    LSB             reduce using rule 5 (statement -> while_statement .)
    INT             reduce using rule 5 (statement -> while_statement .)
    STRING          reduce using rule 5 (statement -> while_statement .)
    $end            reduce using rule 5 (statement -> while_statement .)
    RMB             reduce using rule 5 (statement -> while_statement .)


state 6

    (6) statement -> variable_declaration . SEMI

    SEMI            shift and go to state 29


state 7

    (7) statement -> variable_value_change . SEMI

    SEMI            shift and go to state 30


state 8

    (8) statement -> function_declaration .

    PASS            reduce using rule 8 (statement -> function_declaration .)
    IF              reduce using rule 8 (statement -> function_declaration .)
    WHILE           reduce using rule 8 (statement -> function_declaration .)
    VAR             reduce using rule 8 (statement -> function_declaration .)
    IDENTIFIER      reduce using rule 8 (statement -> function_declaration .)
    FUNCTION        reduce using rule 8 (statement -> function_declaration .)
    USE             reduce using rule 8 (statement -> function_declaration .)
    MINUS           reduce using rule 8 (statement -> function_declaration .)
    LSB             reduce using rule 8 (statement -> function_declaration .)
    INT             reduce using rule 8 (statement -> function_declaration .)
    STRING          reduce using rule 8 (statement -> function_declaration .)
    $end            reduce using rule 8 (statement -> function_declaration .)
    RMB             reduce using rule 8 (statement -> function_declaration .)


state 9

    (9) statement -> PASS . SEMI

    SEMI            shift and go to state 31


state 10

    (10) statement -> use . SEMI

    SEMI            shift and go to state 32


state 11

    (11) statement -> empty .

    PASS            reduce using rule 11 (statement -> empty .)
    IF              reduce using rule 11 (statement -> empty .)
    WHILE           reduce using rule 11 (statement -> empty .)
    VAR             reduce using rule 11 (statement -> empty .)
    IDENTIFIER      reduce using rule 11 (statement -> empty .)
    FUNCTION        reduce using rule 11 (statement -> empty .)
    USE             reduce using rule 11 (statement -> empty .)
    MINUS           reduce using rule 11 (statement -> empty .)
    LSB             reduce using rule 11 (statement -> empty .)
    INT             reduce using rule 11 (statement -> empty .)
    STRING          reduce using rule 11 (statement -> empty .)
    $end            reduce using rule 11 (statement -> empty .)
    RMB             reduce using rule 11 (statement -> empty .)


state 12

    (12) statement -> expression . SEMI

    SEMI            shift and go to state 33


state 13

    (30) if_statement -> IF . LSB expression RSB LMB root RMB

    LSB             shift and go to state 34


state 14

    (49) calculate -> LSB . calculate RSB
    (44) calculate -> . calculate PLUS calculate
    (45) calculate -> . calculate MINUS calculate
    (46) calculate -> . calculate MUL calculate
    (47) calculate -> . calculate DIV calculate
    (48) calculate -> . MINUS calculate
    (49) calculate -> . LSB calculate RSB
    (50) calculate -> . INT
    (51) calculate -> . IDENTIFIER

    MINUS           shift and go to state 24
    LSB             shift and go to state 14
    INT             shift and go to state 25
    IDENTIFIER      shift and go to state 36

    calculate                      shift and go to state 35

state 15

    (29) while_statement -> WHILE . LSB expression RSB LMB root RMB

    LSB             shift and go to state 37


state 16

    (18) variable_declaration -> VAR . IDENTIFIER EQUAL expression
    (19) variable_declaration -> VAR . IDENTIFIER

    IDENTIFIER      shift and go to state 38


state 17

    (20) variable_value_change -> IDENTIFIER . EQUAL expression
    (51) calculate -> IDENTIFIER .
    (21) function_call -> IDENTIFIER . LSB function_call_parameter RSB

  ! shift/reduce conflict for EQUAL resolved as shift
    EQUAL           shift and go to state 39
    PLUS            reduce using rule 51 (calculate -> IDENTIFIER .)
    MINUS           reduce using rule 51 (calculate -> IDENTIFIER .)
    MUL             reduce using rule 51 (calculate -> IDENTIFIER .)
    DIV             reduce using rule 51 (calculate -> IDENTIFIER .)
    SEMI            reduce using rule 51 (calculate -> IDENTIFIER .)
    LB              reduce using rule 51 (calculate -> IDENTIFIER .)
    RB              reduce using rule 51 (calculate -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 51 (calculate -> IDENTIFIER .)
    LSB             shift and go to state 40

  ! EQUAL           [ reduce using rule 51 (calculate -> IDENTIFIER .) ]


state 18

    (25) function_declaration -> FUNCTION . IDENTIFIER LSB function_parameter RSB LMB root RMB

    IDENTIFIER      shift and go to state 41


state 19

    (17) use -> USE . IDENTIFIER

    IDENTIFIER      shift and go to state 42


state 20

    (13) expression -> calculate .
    (44) calculate -> calculate . PLUS calculate
    (45) calculate -> calculate . MINUS calculate
    (46) calculate -> calculate . MUL calculate
    (47) calculate -> calculate . DIV calculate
    (34) compare_expression -> calculate .

  ! reduce/reduce conflict for SEMI resolved using rule 13 (expression -> calculate .)
  ! reduce/reduce conflict for RSB resolved using rule 13 (expression -> calculate .)
    SEMI            reduce using rule 13 (expression -> calculate .)
    RSB             reduce using rule 13 (expression -> calculate .)
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    MUL             shift and go to state 45
    DIV             shift and go to state 46
    LB              reduce using rule 34 (compare_expression -> calculate .)
    RB              reduce using rule 34 (compare_expression -> calculate .)
    EQUAL           reduce using rule 34 (compare_expression -> calculate .)
    NOTEQUAL        reduce using rule 34 (compare_expression -> calculate .)

  ! SEMI            [ reduce using rule 34 (compare_expression -> calculate .) ]
  ! RSB             [ reduce using rule 34 (compare_expression -> calculate .) ]


state 21

    (14) expression -> string_calculate .
    (41) string_calculate -> string_calculate . stringoperator STRING
    (43) stringoperator -> . PLUS

    SEMI            reduce using rule 14 (expression -> string_calculate .)
    RSB             reduce using rule 14 (expression -> string_calculate .)
    PLUS            shift and go to state 48

    stringoperator                 shift and go to state 47

state 22

    (15) expression -> compare_expression .
    (33) compare_expression -> compare_expression . compare_operator calculate
    (35) compare_operator -> . LB
    (36) compare_operator -> . RB
    (37) compare_operator -> . LB EQUAL
    (38) compare_operator -> . RB EQUAL
    (39) compare_operator -> . EQUAL EQUAL
    (40) compare_operator -> . NOTEQUAL EQUAL

    SEMI            reduce using rule 15 (expression -> compare_expression .)
    RSB             reduce using rule 15 (expression -> compare_expression .)
    LB              shift and go to state 50
    RB              shift and go to state 51
    EQUAL           shift and go to state 52
    NOTEQUAL        shift and go to state 53

    compare_operator               shift and go to state 49

state 23

    (16) expression -> function_call .

    SEMI            reduce using rule 16 (expression -> function_call .)
    RSB             reduce using rule 16 (expression -> function_call .)


state 24

    (48) calculate -> MINUS . calculate
    (44) calculate -> . calculate PLUS calculate
    (45) calculate -> . calculate MINUS calculate
    (46) calculate -> . calculate MUL calculate
    (47) calculate -> . calculate DIV calculate
    (48) calculate -> . MINUS calculate
    (49) calculate -> . LSB calculate RSB
    (50) calculate -> . INT
    (51) calculate -> . IDENTIFIER

    MINUS           shift and go to state 24
    LSB             shift and go to state 14
    INT             shift and go to state 25
    IDENTIFIER      shift and go to state 36

    calculate                      shift and go to state 54

state 25

    (50) calculate -> INT .

    PLUS            reduce using rule 50 (calculate -> INT .)
    MINUS           reduce using rule 50 (calculate -> INT .)
    MUL             reduce using rule 50 (calculate -> INT .)
    DIV             reduce using rule 50 (calculate -> INT .)
    SEMI            reduce using rule 50 (calculate -> INT .)
    LB              reduce using rule 50 (calculate -> INT .)
    RB              reduce using rule 50 (calculate -> INT .)
    EQUAL           reduce using rule 50 (calculate -> INT .)
    NOTEQUAL        reduce using rule 50 (calculate -> INT .)
    RSB             reduce using rule 50 (calculate -> INT .)
    COMMA           reduce using rule 50 (calculate -> INT .)


state 26

    (42) string_calculate -> STRING .

    PLUS            reduce using rule 42 (string_calculate -> STRING .)
    SEMI            reduce using rule 42 (string_calculate -> STRING .)
    RSB             reduce using rule 42 (string_calculate -> STRING .)


state 27

    (2) root -> root statement .

    PASS            reduce using rule 2 (root -> root statement .)
    IF              reduce using rule 2 (root -> root statement .)
    WHILE           reduce using rule 2 (root -> root statement .)
    VAR             reduce using rule 2 (root -> root statement .)
    IDENTIFIER      reduce using rule 2 (root -> root statement .)
    FUNCTION        reduce using rule 2 (root -> root statement .)
    USE             reduce using rule 2 (root -> root statement .)
    MINUS           reduce using rule 2 (root -> root statement .)
    LSB             reduce using rule 2 (root -> root statement .)
    INT             reduce using rule 2 (root -> root statement .)
    STRING          reduce using rule 2 (root -> root statement .)
    $end            reduce using rule 2 (root -> root statement .)
    RMB             reduce using rule 2 (root -> root statement .)


state 28

    (31) if_statement -> if_statement ELSE . IF LSB expression RSB LMB root RMB
    (32) if_statement -> if_statement ELSE . LMB root RMB

    IF              shift and go to state 55
    LMB             shift and go to state 56


state 29

    (6) statement -> variable_declaration SEMI .

    PASS            reduce using rule 6 (statement -> variable_declaration SEMI .)
    IF              reduce using rule 6 (statement -> variable_declaration SEMI .)
    WHILE           reduce using rule 6 (statement -> variable_declaration SEMI .)
    VAR             reduce using rule 6 (statement -> variable_declaration SEMI .)
    IDENTIFIER      reduce using rule 6 (statement -> variable_declaration SEMI .)
    FUNCTION        reduce using rule 6 (statement -> variable_declaration SEMI .)
    USE             reduce using rule 6 (statement -> variable_declaration SEMI .)
    MINUS           reduce using rule 6 (statement -> variable_declaration SEMI .)
    LSB             reduce using rule 6 (statement -> variable_declaration SEMI .)
    INT             reduce using rule 6 (statement -> variable_declaration SEMI .)
    STRING          reduce using rule 6 (statement -> variable_declaration SEMI .)
    $end            reduce using rule 6 (statement -> variable_declaration SEMI .)
    RMB             reduce using rule 6 (statement -> variable_declaration SEMI .)


state 30

    (7) statement -> variable_value_change SEMI .

    PASS            reduce using rule 7 (statement -> variable_value_change SEMI .)
    IF              reduce using rule 7 (statement -> variable_value_change SEMI .)
    WHILE           reduce using rule 7 (statement -> variable_value_change SEMI .)
    VAR             reduce using rule 7 (statement -> variable_value_change SEMI .)
    IDENTIFIER      reduce using rule 7 (statement -> variable_value_change SEMI .)
    FUNCTION        reduce using rule 7 (statement -> variable_value_change SEMI .)
    USE             reduce using rule 7 (statement -> variable_value_change SEMI .)
    MINUS           reduce using rule 7 (statement -> variable_value_change SEMI .)
    LSB             reduce using rule 7 (statement -> variable_value_change SEMI .)
    INT             reduce using rule 7 (statement -> variable_value_change SEMI .)
    STRING          reduce using rule 7 (statement -> variable_value_change SEMI .)
    $end            reduce using rule 7 (statement -> variable_value_change SEMI .)
    RMB             reduce using rule 7 (statement -> variable_value_change SEMI .)


state 31

    (9) statement -> PASS SEMI .

    PASS            reduce using rule 9 (statement -> PASS SEMI .)
    IF              reduce using rule 9 (statement -> PASS SEMI .)
    WHILE           reduce using rule 9 (statement -> PASS SEMI .)
    VAR             reduce using rule 9 (statement -> PASS SEMI .)
    IDENTIFIER      reduce using rule 9 (statement -> PASS SEMI .)
    FUNCTION        reduce using rule 9 (statement -> PASS SEMI .)
    USE             reduce using rule 9 (statement -> PASS SEMI .)
    MINUS           reduce using rule 9 (statement -> PASS SEMI .)
    LSB             reduce using rule 9 (statement -> PASS SEMI .)
    INT             reduce using rule 9 (statement -> PASS SEMI .)
    STRING          reduce using rule 9 (statement -> PASS SEMI .)
    $end            reduce using rule 9 (statement -> PASS SEMI .)
    RMB             reduce using rule 9 (statement -> PASS SEMI .)


state 32

    (10) statement -> use SEMI .

    PASS            reduce using rule 10 (statement -> use SEMI .)
    IF              reduce using rule 10 (statement -> use SEMI .)
    WHILE           reduce using rule 10 (statement -> use SEMI .)
    VAR             reduce using rule 10 (statement -> use SEMI .)
    IDENTIFIER      reduce using rule 10 (statement -> use SEMI .)
    FUNCTION        reduce using rule 10 (statement -> use SEMI .)
    USE             reduce using rule 10 (statement -> use SEMI .)
    MINUS           reduce using rule 10 (statement -> use SEMI .)
    LSB             reduce using rule 10 (statement -> use SEMI .)
    INT             reduce using rule 10 (statement -> use SEMI .)
    STRING          reduce using rule 10 (statement -> use SEMI .)
    $end            reduce using rule 10 (statement -> use SEMI .)
    RMB             reduce using rule 10 (statement -> use SEMI .)


state 33

    (12) statement -> expression SEMI .

    PASS            reduce using rule 12 (statement -> expression SEMI .)
    IF              reduce using rule 12 (statement -> expression SEMI .)
    WHILE           reduce using rule 12 (statement -> expression SEMI .)
    VAR             reduce using rule 12 (statement -> expression SEMI .)
    IDENTIFIER      reduce using rule 12 (statement -> expression SEMI .)
    FUNCTION        reduce using rule 12 (statement -> expression SEMI .)
    USE             reduce using rule 12 (statement -> expression SEMI .)
    MINUS           reduce using rule 12 (statement -> expression SEMI .)
    LSB             reduce using rule 12 (statement -> expression SEMI .)
    INT             reduce using rule 12 (statement -> expression SEMI .)
    STRING          reduce using rule 12 (statement -> expression SEMI .)
    $end            reduce using rule 12 (statement -> expression SEMI .)
    RMB             reduce using rule 12 (statement -> expression SEMI .)


state 34

    (30) if_statement -> IF LSB . expression RSB LMB root RMB
    (13) expression -> . calculate
    (14) expression -> . string_calculate
    (15) expression -> . compare_expression
    (16) expression -> . function_call
    (44) calculate -> . calculate PLUS calculate
    (45) calculate -> . calculate MINUS calculate
    (46) calculate -> . calculate MUL calculate
    (47) calculate -> . calculate DIV calculate
    (48) calculate -> . MINUS calculate
    (49) calculate -> . LSB calculate RSB
    (50) calculate -> . INT
    (51) calculate -> . IDENTIFIER
    (41) string_calculate -> . string_calculate stringoperator STRING
    (42) string_calculate -> . STRING
    (33) compare_expression -> . compare_expression compare_operator calculate
    (34) compare_expression -> . calculate
    (21) function_call -> . IDENTIFIER LSB function_call_parameter RSB

    MINUS           shift and go to state 24
    LSB             shift and go to state 14
    INT             shift and go to state 25
    IDENTIFIER      shift and go to state 58
    STRING          shift and go to state 26

    expression                     shift and go to state 57
    calculate                      shift and go to state 20
    string_calculate               shift and go to state 21
    compare_expression             shift and go to state 22
    function_call                  shift and go to state 23

state 35

    (49) calculate -> LSB calculate . RSB
    (44) calculate -> calculate . PLUS calculate
    (45) calculate -> calculate . MINUS calculate
    (46) calculate -> calculate . MUL calculate
    (47) calculate -> calculate . DIV calculate

    RSB             shift and go to state 59
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    MUL             shift and go to state 45
    DIV             shift and go to state 46


state 36

    (51) calculate -> IDENTIFIER .

    RSB             reduce using rule 51 (calculate -> IDENTIFIER .)
    PLUS            reduce using rule 51 (calculate -> IDENTIFIER .)
    MINUS           reduce using rule 51 (calculate -> IDENTIFIER .)
    MUL             reduce using rule 51 (calculate -> IDENTIFIER .)
    DIV             reduce using rule 51 (calculate -> IDENTIFIER .)
    SEMI            reduce using rule 51 (calculate -> IDENTIFIER .)
    LB              reduce using rule 51 (calculate -> IDENTIFIER .)
    RB              reduce using rule 51 (calculate -> IDENTIFIER .)
    EQUAL           reduce using rule 51 (calculate -> IDENTIFIER .)
    NOTEQUAL        reduce using rule 51 (calculate -> IDENTIFIER .)
    COMMA           reduce using rule 51 (calculate -> IDENTIFIER .)


state 37

    (29) while_statement -> WHILE LSB . expression RSB LMB root RMB
    (13) expression -> . calculate
    (14) expression -> . string_calculate
    (15) expression -> . compare_expression
    (16) expression -> . function_call
    (44) calculate -> . calculate PLUS calculate
    (45) calculate -> . calculate MINUS calculate
    (46) calculate -> . calculate MUL calculate
    (47) calculate -> . calculate DIV calculate
    (48) calculate -> . MINUS calculate
    (49) calculate -> . LSB calculate RSB
    (50) calculate -> . INT
    (51) calculate -> . IDENTIFIER
    (41) string_calculate -> . string_calculate stringoperator STRING
    (42) string_calculate -> . STRING
    (33) compare_expression -> . compare_expression compare_operator calculate
    (34) compare_expression -> . calculate
    (21) function_call -> . IDENTIFIER LSB function_call_parameter RSB

    MINUS           shift and go to state 24
    LSB             shift and go to state 14
    INT             shift and go to state 25
    IDENTIFIER      shift and go to state 58
    STRING          shift and go to state 26

    expression                     shift and go to state 60
    calculate                      shift and go to state 20
    string_calculate               shift and go to state 21
    compare_expression             shift and go to state 22
    function_call                  shift and go to state 23

state 38

    (18) variable_declaration -> VAR IDENTIFIER . EQUAL expression
    (19) variable_declaration -> VAR IDENTIFIER .

    EQUAL           shift and go to state 61
    SEMI            reduce using rule 19 (variable_declaration -> VAR IDENTIFIER .)


state 39
